--- a/bundle/vim-latex-1.8.23-20141116.812-gitd0f31c9/ftplugin/latex-suite/templates/article.tex
+++ b/bundle/vim-latex-1.8.23-20141116.812-gitd0f31c9/ftplugin/latex-suite/templates/article.tex
@@ -1,7 +1,7 @@
 <+	+>	!comp!	!exe!
 \documentclass[12pt, letterpaper]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[top=.75in, bottom=.75in, left=.75in, right=.75in]{geometry}
+\usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{caption}
