Update article template

--- a/bundle/vim-latex-1.8.23-20141116.812-gitd0f31c9/ftplugin/latex-suite/templates/article.tex
+++ b/bundle/vim-latex-1.8.23-20141116.812-gitd0f31c9/ftplugin/latex-suite/templates/article.tex
@@ -5,6 +5,10 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{caption}
+\usepackage{palatino}
+\usepackage{csquotes}
+
+\bibliographystyle{ieeetr}
 
 \author{Geoff Pleiss}
 \date{\today}
